--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Score Keeper</string>
     <string name="game_name">American Foodball</string>
+    <string name="setting">Setting</string>
+    <string name="about">About</string>
     <string-array name="score_array">
 
         <item>1</item>
